# mlua-swarm

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  dist-workspace.toml  justfile  release-plz.toml  server.json
.github/workflows/: release-plz.yml  release.yml
crates/mlua-swarm-cli/: Cargo.toml
crates/mlua-swarm-cli/src/: bp.rs  lib.rs  main.rs  mcp.rs  serve.rs
crates/mlua-swarm-cli/src/dsl/: bp_dsl.lua  flow_dsl.lua  mod.rs
crates/mlua-swarm-cli/src/mcp/: operator_client.rs  resources.rs  server_control.rs
crates/mlua-swarm-cli/src/mcp/resources/guides/: agent-md-authoring.md  blueprint-authoring.md  blueprint-ref-paths.md  bp-dsl-templates.md  dsl-authoring.md  getting-started.md  id-lifecycle.md  mcp-tool-reference.md  operator-execution-model.md  replay-and-resume.md  server-management.md  skip-tier-and-skip-on.md  worker-io-contract.md
crates/mlua-swarm-cli/src/mcp/resources/samples/: 01-pure-ctx-eval.json  02-verdict-loop.json  03-fn-override.json  04-after-run-audit-operator.json  05-after-run-audit-agent-block.json  07-dsl-pipeline.bp.lua  08-bundled-refs.bp.lua
crates/mlua-swarm-cli/src/mcp/resources/samples/agents/: README.md  bp-review.md  researcher.md  reviewer.md
crates/mlua-swarm-cli/src/mcp/resources/samples/bp/: skip-on-example.bp.lua
crates/mlua-swarm-cli/src/server/: error.rs  launchd.rs  mod.rs  plist.template
crates/mlua-swarm-cli/tests/: bp_build_cli.rs  dsl_golden_phase_b.rs  dsl_golden_verdict_loop.rs  dsl_json_equivalence_pipeline.rs  dsl_json_equivalence_verdict_loop.rs  dsl_node_parity.rs  dsl_parity.rs  dsl_pipeline.rs
crates/mlua-swarm-cli/tests/fixtures/: phase-b-real-agents.json  phase_b.bp.lua  pipeline.bp.lua  pipeline.json  verdict_loop.bp.lua
crates/mlua-swarm-compile/: Cargo.toml
crates/mlua-swarm-compile/src/: agent_md.rs  lib.rs  linker.rs
crates/mlua-swarm-dsl/: Cargo.toml
crates/mlua-swarm-dsl/src/: bp_dsl.lua  flow_dsl.lua  lib.rs
crates/mlua-swarm-schema/: Cargo.toml
crates/mlua-swarm-schema/src/: lib.rs
crates/mlua-swarm-server/: Cargo.toml
crates/mlua-swarm-server/src/: binding.rs  blueprints.rs  config.rs  data.rs  doctor.rs  enhance_log.rs  enhance_settings.rs  issues.rs  lib.rs  operator_ws.rs  projection.rs  tasks.rs  worker.rs
crates/mlua-swarm-server/src/operator_ws/: login.rs  protocol.rs  session.rs
crates/mlua-swarm-server/tests/: replay_e2e.rs  rerun_from.rs  restart_operator_sid.rs  resume.rs  verdict_contract.rs  worker_submit_skip.rs
scripts/launchd/: README.md  com.mse.server.plist.template  install.sh
src/: application.rs  binding.rs  blueprint.rs  core.rs  enhance.rs  lib.rs  lua.rs  middleware.rs  operator.rs  service.rs  store.rs  types.rs  worker.rs
src/application/: enhance.rs  task.rs
src/blueprint/: compiler.rs  loader.rs  store.rs
src/blueprint/store/: git2_blob_store.rs  git2_store.rs  inmemory.rs  types.rs
src/core/: agent_context.rs  config.rs  ctx.rs  engine.rs  errors.rs  explain.rs  projection.rs  projection_placement.rs  state.rs  step_naming.rs
src/enhance/: blueprint.rs  default_blueprint.yaml  setting.rs
src/enhance/scripts/: committer.lua  patch_applier.lua  verifier_router.lua
src/lua/: agent_md_loader.rs  bridge.rs
src/middleware/: agent_context.rs  input_inject.rs  lua_layer.rs  project_name_alias.rs  resolver.rs  sink.rs  task_input.rs  worker_binding.rs
src/operator/: render.rs
src/service/: linker.rs  task_launch.rs
src/store/: enhance_log.rs  enhance_setting.rs  output.rs
src/store/enhance_log/: mod.rs  sqlite.rs
src/store/enhance_setting/: mod.rs  sqlite.rs
src/store/issue/: inmemory.rs  mod.rs  sqlite.rs
src/store/output/: mod.rs  sqlite.rs
src/store/replay/: mod.rs  sqlite.rs
src/store/run/: inmemory.rs  mod.rs  sqlite.rs
src/store/task/: inmemory.rs  mod.rs  sqlite.rs
src/worker/: adapter.rs  baseline.rs  output.rs  process_spawner.rs
src/worker/agent_block/: mod.rs  runtime.rs
tests/: provider_cross_platform.rs  replay_ctx_reconstruct.rs
