[package]
name = "mlua-swarm-cli"
version = "0.14.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
description = "Command line interface for mlua-swarm (mse binary with serve / mcp subcommands)."
keywords = ["swarm", "lua", "mcp", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "mse"
path = "src/main.rs"

[package.metadata.dist]
# Homebrew formula name (cargo-dist defaults to package name; pin to the bin name)
formula = "mse"

[dependencies]
mlua-swarm.workspace = true
mlua-swarm-server.workspace = true
mlua-swarm-schema.workspace = true
mlua-swarm-dsl.workspace = true
mlua-swarm-compile.workspace = true
rusqlite-isle.workspace = true
mlua-flow-ir.workspace = true
mlua.workspace = true

anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
async-trait.workspace = true
futures-util.workspace = true
reqwest.workspace = true
uuid.workspace = true
rmcp.workspace = true
tokio-tungstenite.workspace = true
axum.workspace = true
hex.workspace = true
sha2.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true

[dev-dependencies]
tempfile.workspace = true
assert_cmd = "2"
predicates = "3"
