[package]
name = "mlua-swarm-schema"
version = "0.9.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
description = "Blueprint schema types for mlua-swarm — Swarm IF SoT (Blueprint / AgentDef / AgentKind / Hints / Strategy / Metadata)."
keywords = ["swarm", "lua", "blueprint", "schema", "flow-ir"]
categories = ["data-structures"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
schemars.workspace = true
mlua-flow-ir.workspace = true
thiserror.workspace = true
