[package]
name = "mlua-swarm-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
description = "HTTP interface for mlua-swarm."

[dependencies]
mlua-swarm.workspace = true
mlua-swarm-schema.workspace = true
mlua-flow-ir.workspace = true

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
axum.workspace = true
futures-util.workspace = true
hex.workspace = true
clap.workspace = true
reqwest.workspace = true
uuid.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio-tungstenite.workspace = true
