[package]
name = "mlua-swarm-server"
version = "0.14.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
description = "HTTP + WebSocket server for mlua-swarm (task API, Blueprint store, Operator WS sessions)."
keywords = ["swarm", "lua", "mcp", "http", "websocket"]
categories = ["asynchronous", "web-programming::websocket"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
mlua-swarm.workspace = true
mlua-swarm-schema.workspace = true
mlua-swarm-compile.workspace = true
mlua-flow-ir.workspace = true

serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
axum.workspace = true
futures-util.workspace = true
hex.workspace = true
sha2.workspace = true
clap.workspace = true
reqwest.workspace = true
uuid.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio-tungstenite.workspace = true
rusqlite-isle.workspace = true
